# ============================================================================
# ФАЙЛ: CMakeLists.txt
# НАЗНАЧЕНИЕ: Инструкция для системы сборки CMake
# ============================================================================

# Указываем минимальную версию CMake, которая нам нужна.
# Pico SDK требует как минимум 3.13. Это как сказать: "Мне нужен инструмент не старше 2018 года".
cmake_minimum_required(VERSION 3.13)

# Подключаем внешний файл, который "знает", где установлен Pico SDK.
# Путь к этому файлу мы укажем чуть позже (в шаге 2).
# Это как подключить инструкцию по эксплуатации перед началом работы.
include(pico_sdk_import.cmake)

# Создаём "проект" с именем "blink".
# VERSION — версия нашего проекта (пока 1.0).
# C/CXX — языки, которые мы используем (C и C++).
project(blink VERSION 1.0 LANGUAGES C CXX)

# Инициализируем Pico SDK.
# Эта команда подготавливает все необходимые настройки: пути к заголовочным файлам, библиотекам и т.д.
# Без этого шага компилятор не поймёт, что такое "pico/stdlib.h".
pico_sdk_init()

# Создаём исполняемый файл с именем "blink" из исходного файла "blink.cpp".
# Пока что файла blink.cpp ещё нет — мы создадим его на Шаге 3.
# Но CMake должен заранее знать: "Когда появится blink.cpp, собери из него программу с именем blink".
add_executable(blink blink.cpp)

# Подключаем к нашему исполняемому файлу необходимые библиотеки Pico SDK:
# - pico_stdlib: базовые функции (ввод/вывод, задержки, работа с пинами)
# - pico_multicore: поддержка двух ядер (пока не используем, но подключим "на будущее")
# Это как сказать: "Для работы моей программы нужны эти инструменты из набора Pico".
target_link_libraries(blink pico_stdlib pico_multicore)

# Говорим Pico SDK, что мы хотим создать файл в формате .uf2.
# .uf2 — это специальный формат, который Pico понимает при прошивке через USB.
# Без этой строки мы получили бы обычный .elf-файл, который нельзя просто скопировать на плату.
pico_add_extra_outputs(blink)